services/zwave-js-ui/websocket_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave-js-ui-ws
  namespace: services
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: zwave-js-ui
    app.kubernetes.io/name: zwave-js-ui
  ports:
    - name: websocket
      port: 3000
      targetPort: 3000
      nodePort: 32000
