services/zwave-js-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave-js-ui
  namespace: services
  annotations:
    kubernetes.io/ingress.class: cilium
    ingress.cilium.io/proxy-read-timeout: "3600"
    ingress.cilium.io/proxy-send-timeout: "3600"
    ingress.cilium.io/proxy-connect-timeout: "30"
spec:
  rules:
    - host: zwave.agate.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zwave-js-ui
                port:
                  number: 80
